--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -5,10 +5,6 @@
   <title>首页</title>
 </head>
 <body>
-  index
-  <div class="slider">
-    <div>I am a slide.</div>
-    <div>I am another slide.</div>
-  </div>
+	<div id="app">index.html</div>
 </body>
 </html>
