--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
   ${require('@/assets/html/head.html')}
-  <title>首页</title>
+  <title>webpack4-ejs-template-example - example project for continue new project</title>
 </head>
 <body>
-	<div id="app">index.html</div>
+	<div id="app">loading...</div>
+    <script type="text/javascript" src="./chrome/utils/delegate.js"></script>
+    <script type="text/javascript" src="./chrome/utils/axios.js"></script>
+    <script type="text/javascript" src="./chrome/utils/qs.js"></script>
 </body>
 </html>
