--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   ${require('@/assets/html/head.html')}
-  <title>webpack4-ejs-template-example - example project for continue new project</title>
+  <title>${require('@root/package.json').name} - ${require('@root/package.json').description} </title>
 </head>
 <body>
 	<div id="app">loading...</div>
